
- special characters in file:// URLs passed on to jEdit.openFile()
  were not being properly decoded (1663617).

- 1687147 - Gutter line number interval highlighting corrected
  when used with soft wrap (nyte7).

- 1667659 - Fix for FTP I/O regression in 4.3pre9 (Kazutoshi Satoda)

- HyperSearch Results does not lose focus on enter (Bug 1260023,
  Patch 1646058) (Kazutoshi Satoda)
  
- Use encoding in buffer histories for temporary buffers (Patch
  1687284) (Kazutoshi Satoda)

- In the logviewer if the tail checkbox is on,
  the last line was not visible after resizing the panel
  (Matthieu Casanova)

- Autoreload buffer without notification was not available in
  General option pane (bug #1641997) (Matthieu Casanova)

- When saving a buffer, if the encoding is unsupported,
  an error dialog appears (Matthieu Casanova)

- A bug when loading a plugin the dependency check had errors :
  for example when you have Sidekick, JavaSidekick and another plugin
  that requires Sidekick (PHPParser, XML ...)
  in your jar folder, all unloaded, try to load the third one,
  the dependency check will try to load JavaSidekick instead of
  Sidekick (Matthieu Casanova)

- VFSBrowser.filesActivated() - passed proper View to jEdit.openFile()
  from FSB open action (Alan Ezust).

- Escape char ignored in some edit modes (bug #1630805)
  (Matthieu Casanova)

- Bug #1649695: jEdit shell script doesn't handle spaces in filenames
  (Nicholas O'Leary)

- Macro Single_Space_Buffer was broken (#1525313) (Matthieu Casanova)

- Scrolling up broken after content removing (#1584436) (Matthieu Casanova)

- SF Patch #1663901: Improve performance in TokenMarker.handleRule()
  Daniel Hahler reported that jProfiler found some unoptimized code in
  TokenMarker.handleRule(). Instead of applying his patch directly, I
  implemented another approach and also took care of the other case
  of allocating a new string to do a comparison. (Marcelo Vanzin)
